🎨 style(zh_TW.json): change "display.queue.empty" to "empty" and add "none" key to the file

--- a/locale/zh_TW.json
+++ b/locale/zh_TW.json
@@ -99,7 +99,8 @@
     "display.repeat_mode": "🔁 重複播放模式",
     "display.queue": "📃 播放序列",
     "display.queue.more": "還有更多...",
-    "display.queue.empty": "空",
+    "empty": "空",
+    "none": "無",
     "display.filters": "⚙️ 已啟用效果器",
     "display.shuffle": "🔀 隨機播放",
     "display.enable": "開啟",
