--- a/locale/en_US.json
+++ b/locale/en_US.json
@@ -89,7 +89,7 @@
     "error.bot_not_in_voice": "我沒有連接到一個語音頻道",
     "error.user_not_in_voice": "你沒有連接到一個語音頻道",
     "error.must_in_same_voice": "你必須與我在同一個語音頻道",
-    "display.status,playing": "播放中",
+    "display.status.playing": "播放中",
     "display.status.paused": "已暫停",
     "display.status.disconnected": "已斷線",
     "display.status.ended": "已結束",
