--- a/locale/en_US.json
+++ b/locale/en_US.json
@@ -6,7 +6,7 @@
     "command.play.option.query": "Music title/name or URL, support YouTube, YouTube Music, SoundCloud, Spotify",
     "command.play.option.index": "The queue index song should be inserted to",
     "command.play.error.no_results.title": "No results *sadface*",
-    "command.play.error.no_results.description": "If you want to search with keywords, please type your keywords into `query`, then wait a moment, and the search result will display in a pop-up",
+    "command.play.error.no_results.description": "If you want to search with keywords, please type your keywords into `query`, then wait a moment, the search result will display in a pop-up",
     "command.play.filter_warning.title": "Warning",
     "command.play.loaded.title": "Added to queue",
     "command.skip.name": "skip",
