--- a/locale/en_US.json
+++ b/locale/en_US.json
@@ -12,12 +12,12 @@
     "command.skip.name": "skip",
     "command.skip.description": "Skip current playing track",
     "command.skip.option.target": "The track number to skip to",
-    "command.skip.option.move": "Whether to remove ALL queues before target, if target isn't provided, this parameter will be ignored",
-    "error.nothing_playing": "Nothing is playing *sadface*",
+    "command.skip.option.move": "Whether to remove ALL queues before target, if target isn't specified, this parameter will be ignored",
+    "error.nothing_playing": "Nothing is playing:(",
     "error.invalid_track_number": "Invalid track number",
-    "command.skip.success": "Skipped current song",
+    "command.skip.success": "Skipped current track",
     "command.remove.name": "remove",
-    "command.remove.description": "Remove a song from queue",
+    "command.remove.description": "Remove a track from queue",
     "command.remove.option.target": "The track number to remove",
     "command.remove.success": "Track removed from queue",
     "command.clean.name": "clean",
@@ -40,7 +40,7 @@
     "command.connect.error.already_in_channel.continue": "Continue",
     "command.connect.error.already_in_channel.cancel": "Canceled",
     "command.disconnect.name": "disconnect",
-    "command.disconnect.description": "Disconnect from channel",
+    "command.disconnect.description": "Disconnected",
     "command.queue.name": "queue",
     "command.queue.description": "Show current queue",
     "command.queue.error.empty": "The queue is empty",
@@ -48,10 +48,10 @@
     "command.queue.error.interaction_check_message": "Hey! You aren't supposed to touch me",
     "command.repeat.name": "repeat",
     "command.repeat.description": "Change repeat mode",
-    "command.repeat.option.mode": "Repeat Mode",
+    "command.repeat.option.mode": "Repeat mode",
     "repeat_mode.off": "Off",
-    "repeat_mode.song": "Single Track",
-    "repeat_mode.queue": "Whole Queue",
+    "repeat_mode.song": "Single track",
+    "repeat_mode.queue": "Entire queue",
     "command.repeat.success": "Successfully set the repeat mode to",
     "command.shuffle.name": "shuffle",
     "command.shuffle.description": "Toggle shuffle",
@@ -79,9 +79,9 @@
     "command.lowpass.option.smoothing": "Smoothing (1 < n)",
     "command.bassboost.name": "bassboost",
     "command.bassboost.description": "Bass boost with Equalizer",
-    "command.filters.removed": "Removed filter",
+    "command.filters.removed": "Removed Filter",
     "command.filters.invalid_params": "Please enter a valid value",
-    "command.filters.set": "Set the filter",
+    "command.filters.set": "Set the Filter",
     "error.play_failed": "Failed to play the track",
     "reason": "Reason",
     "error.command.title": "An error occurred while executing the command",
