Add ability to reselect songs from dropdown menu
This commit updates the music player code to allow users to reselect a song from the dropdown menu if they did not select a song on their first attempt. Now, if a user does not select a song, they will be prompted to select a song again to continue.

--- a/locale/zh_TW.json
+++ b/locale/zh_TW.json
@@ -18,6 +18,9 @@
     "command.play.error.no_results.description": "如果你想要使用關鍵字搜尋，請在輸入關鍵字後等待幾秒，搜尋結果將會自動顯示在上方",
     "command.play.filter_warning.title": "提醒",
     "command.play.loaded.title": "已加入播放序列",
+    "command.play.select_menu.placeholder": "選擇一首歌曲",
+    "command.play.select_warning.title": "您似乎沒有選到任何一首歌曲",
+    "command.play.select_warning.description": "不過不要緊，你還可以透過底下的選單來選擇一首音樂",
     "command.skip.name": "skip",
     "command.skip.description": "跳過當前播放的歌曲",
     "command.skip.option.target": "要跳到的歌曲編號",
