--- a/locale/zh_TW.json
+++ b/locale/zh_TW.json
@@ -17,6 +17,7 @@
     "command.play.error.no_results.title": "沒有找到任何歌曲",
     "command.play.error.no_results.description": "如果你想要使用關鍵字搜尋，請在輸入關鍵字後等待幾秒，搜尋結果將會自動顯示在上方",
     "command.play.filter_warning.title": "提醒",
+    "command.play.filter_warning.description": "偵測到 效果器正在運作中，\n這可能會造成音樂聲音有變形(加速、升高等)的情形產生，\n如果這不是你期望的，可以透過效果器的指令來關閉它們\n指令名稱通常等於效果器名稱，例如 `/timescale` 就是控制 Timescale 效果器\n\n以下是正在運行的效果器：",
     "command.play.loaded.title": "已加入播放序列",
     "command.skip.name": "skip",
     "command.skip.description": "跳過當前播放的歌曲",
