--- a/locale/en_US.json
+++ b/locale/en_US.json
@@ -1,13 +1,13 @@
 {
     "command.info.name": "info",
-    "command.info.description": "顯示機器人的資訊",
-    "command.info.embed.title": "機器人資訊",
-    "command.info.embed.start_time": "啟動時間",
-    "command.info.embed.commit_hash": "版本資訊",
+    "command.info.description": "Displays infomation about this bot",
+    "command.info.embed.title": "Bot into",
+    "command.info.embed.start_time": "Up time",
+    "command.info.embed.commit_hash": "Version",
     "command.info.embed.cpu": "CPU",
     "command.info.embed.ram": "RAM",
-    "command.info.embed.guilds": "伺服器數量",
-    "command.info.embed.players": "播放器數量",
+    "command.info.embed.guilds": "Server count",
+    "command.info.embed.players": "Player count",
     "command.nowplaying.name": "nowplaying",
     "command.nowplaying.description": "Display current playing track",
     "command.play.name": "play",
@@ -17,7 +17,7 @@
     "command.play.error.no_results.title": "No results:(",
     "command.play.error.no_results.description": "If you want to search with keywords, please type your keywords into `query`, then wait a moment, and the search result will display in a pop-up",
     "command.play.filter_warning.title": "Warning",
-    "command.play.filter_warning.description": "偵測到 效果器正在運作中，\n這可能會造成音樂聲音有變形(加速、升高等)的情形產生，\n如果這不是你期望的，可以透過效果器的指令來關閉它們\n指令名稱通常等於效果器名稱，例如 `/timescale` 就是控制 Timescale 效果器\n\n以下是正在運行的效果器：",
+    "command.play.filter_warning.description": "It seems like you have enabled filter, \nthat may cause music to pitch, \nif that's not what you wanted, you can turn them off with the corresponding filter commands\nCommand name usually is the same as filter name, for example `/timescale` is used to control Timescale filter \n\n Currently enabled filters",
     "command.play.loaded.title": "Added to queue",
     "command.skip.name": "skip",
     "command.skip.description": "Skip current playing track",
@@ -38,19 +38,19 @@
     "command.pause.success": "Paused",
     "command.resume.name": "resume",
     "command.resume.description": "Resume current paused track",
-    "command.pause.error.nothing_paused": "Nothing paused",
+    "command.pause.error.nothing_paused": "Nothing's paused",
     "command.resume.success": "Resumed",
     "command.stop.name": "stop",
     "command.stop.description": "Stopped and cleared current queue",
     "command.connect.name": "connect",
-    "command.connect.description": "Connect to your current voice channel",
+    "command.connect.description": "Connected to current voice channel",
     "command.connect.success": "Connected to the voice channel",
     "command.connect.error.already_in_channel.title": "Warning",
-    "command.connect.error.already_in_channel.description": "I am already in a channel! If you persist to move me, I will disconnect from the other channel, are you sure to do so?",
+    "command.connect.error.already_in_channel.description": "I am already in a channel! If you persist to move me, I will be disconnect from the other channel, are you sure to do so?",
     "command.connect.error.already_in_channel.continue": "Continue",
     "command.connect.error.already_in_channel.cancel": "Canceled",
     "command.disconnect.name": "disconnect",
-    "command.disconnect.description": "Disconnect from channel",
+    "command.disconnect.description": "Disconnected from channel",
     "command.queue.name": "queue",
     "command.queue.description": "Show current queue",
     "command.queue.error.empty": "The queue is empty",
