--- a/locale/en_US.json
+++ b/locale/en_US.json
@@ -56,13 +56,13 @@
     "command.queue.error.empty": "The queue is empty",
     "command.queue.title": "Queue",
     "command.queue.error.interaction_check_message": "Hey! You aren't supposed to touch me",
-    "command.repeat.name": "repeat",
-    "command.repeat.description": "Change repeat mode",
-    "command.repeat.option.mode": "Repeat Mode",
+    "command.repeat.name": "loop",
+    "command.repeat.description": "Change loop mode",
+    "command.repeat.option.mode": "loop Mode",
     "repeat_mode.off": "Off",
     "repeat_mode.song": "Single Track",
     "repeat_mode.queue": "Entire queue",
-    "command.repeat.success": "Successfully set the repeat mode to",
+    "command.repeat.success": "Successfully set the loop mode to",
     "command.shuffle.name": "shuffle",
     "command.shuffle.description": "Toggle shuffle",
     "command.shuffle.success": "Successfully toggled shuffle",
@@ -106,7 +106,7 @@
     "display.author": "👤 Uploader",
     "display.requester": "👥 Requested by",
     "display.requester.autoplay": "Autoplay",
-    "display.repeat_mode": "🔁 Repeat mode",
+    "display.repeat_mode": "🔁 loop mode",
     "display.queue": "📃 Queue",
     "display.queue.more": "More...",
     "empty": "Empty",
