--- a/locale/en_US.json
+++ b/locale/en_US.json
@@ -8,6 +8,9 @@
     "command.info.embed.ram": "RAM",
     "command.info.embed.guilds": "Server count",
     "command.info.embed.players": "Player count",
+    "command.ping.name": "ping",
+    "command.ping.description": "Check bot latency",
+    "command.ping.title": "Pong!",
     "command.nowplaying.name": "nowplaying",
     "command.nowplaying.description": "Display current playing track",
     "command.play.name": "play",
