fix(locale/zh_TW.json): update lyrics title with microphone emoji

--- a/locale/zh_TW.json
+++ b/locale/zh_TW.json
@@ -123,6 +123,6 @@
     "display.enable": "開啟",
     "display.disable": "關閉",
     "display.footer": "如果你覺得音樂怪怪的，可以試著檢查看看效果器設定或是切換語音頻道地區",
-    "display.lyrics.title": "歌詞",
+    "display.lyrics.title": "🎤 | 歌詞",
     "display.lyrics.not_found": "*你得自己唱出這首歌的歌詞*"
 }
