--- a/locale/zh_TW.json
+++ b/locale/zh_TW.json
@@ -19,6 +19,7 @@
     "command.play.description": "播放音樂",
     "command.play.option.query": "歌曲名稱或網址，支援 YouTube, YouTube Music, SoundCloud, Spotify",
     "command.play.option.index": "要將歌曲放置於當前播放序列的位置",
+    "command.play.option.shuffle": "是否開啟隨機播放模式",
     "command.play.error.no_results.title": "沒有找到任何歌曲",
     "command.play.error.no_results.description": "如果你想要使用關鍵字搜尋，請在輸入關鍵字後等待幾秒，搜尋結果將會自動顯示在上方",
     "command.play.filter_warning.title": "提醒",
