--- a/locale/zh_TW.json
+++ b/locale/zh_TW.json
@@ -31,6 +31,7 @@
     "command.skip.option.move": "是否移除目標以前的所有歌曲，如果沒有提供 target，這個參數會被忽略",
     "error.nothing_playing": "沒有正在播放的音樂",
     "error.invalid_track_number": "無效的歌曲編號",
+    "error.autoplay_failed": "我找不到任何推薦的歌曲，所以我停止了自動播放",
     "command.skip.success": "已跳過歌曲",
     "command.remove.name": "remove",
     "command.remove.description": "移除歌曲",
@@ -126,7 +127,6 @@
     "display.footer": "如果你覺得音樂怪怪的，可以試著檢查看看效果器設定或是切換語音頻道地區",
     "display.lyrics.title": "🎤 | 歌詞",
     "display.lyrics.not_found": "*你得自己唱出這首歌的歌詞*",
-    "error.autoplay_failed": "我找不到任何推薦的歌曲，所以我停止了自動播放"
     "display.control.pause": "暫停",
     "display.control.resume": "繼續",
     "display.control.previous": "重新開始",
