--- a/locale/en_US.json
+++ b/locale/en_US.json
@@ -8,17 +8,17 @@
     "command.info.embed.commit_hash": "Version Info",
     "command.info.embed.cpu": "CPU",
     "command.info.embed.ram": "RAM",
-    "command.info.embed.guilds": "Number of Guilds",
-    "command.info.embed.players": "Number of Players",
+    "command.info.embed.guilds": "Servers",
+    "command.info.embed.players": "Players",
     "command.ping.name": "ping",
-    "command.ping.description": "Check bot latency",
-    "command.ping.title": "Bot Latency",
+    "command.ping.description": "Check bot's latency",
+    "command.ping.title": "Bot's Latency",
     "command.nowplaying.name": "nowplaying",
     "command.nowplaying.description": "Display current playing track",
     "command.play.name": "play",
     "command.play.description": "Play music",
     "command.play.option.query": "Song name or URL, supports YouTube, YouTube Music, SoundCloud, Spotify",
-    "command.play.option.index": "The queue index where track should be inserted to",
+    "command.play.option.index": "The position in queue where track should be inserted to",
     "command.play.option.shuffle": "Whether to enable shuffle when playing",
     "command.play.error.no_results.title": "No results found.:(",
     "command.play.error.no_results.description": "If you want to search by keyword, please wait a few seconds after entering the keyword, and the search results will automatically display above",
@@ -126,7 +126,7 @@
     "display.disable": "OFF",
     "display.footer": "If you felt the quality of the music is kinda awful, maybe checking filters or switching region in voice channel setting will help",
     "display.lyrics.title": "🎤 | Lyrics",
-    "display.lyrics.not_found": "*You need to sing the lyrics of this song yourself*",
+    "display.lyrics.not_found": "Womp wmop can't found the lyrics for this song\n*Looks like you need to sing the lyrics of this song yourself*",
     "display.lyrics.loading": "Loading lyrics...",
     "display.control.pause": "Pause",
     "display.control.resume": "Resume",
